--- a/docs/astro/src/layouts/samples.astro
+++ b/docs/astro/src/layouts/samples.astro
@@ -3,4 +3,13 @@ import Samples from '../../samples/README.md';
 
 ---
 
-<Samples></Samples>
+<div class="readme-content">
+  <style>
+    /* Hide the first h1 heading only within this component */
+    .readme-content :global(h1:first-of-type) {
+      display: none;
+    }
+  </style>
+
+  <Samples />
+</div>
