--- a/docs/astro/src/layouts/contributing.astro
+++ b/docs/astro/src/layouts/contributing.astro
@@ -1,5 +1,14 @@
 ---
 import Contributing from '../../CONTRIBUTING.md';
 ---
-<Contributing>
-</Contributing>
+
+<div class="readme-content">
+  <style>
+    /* Hide the first h1 heading only within this component */
+    .readme-content :global(h1:first-of-type) {
+      display: none;
+    }
+  </style>
+
+  <Contributing />
+</div>
